Upgrade to Java 10